hphp/hack/test/typecheck/references/globals_by_ref.php
<?hh // partial


function globals_by_ref(): void {
  f(&$GLOBALS);
}
